<resources>
    <string name="app_name">Lab tute 4</string>
    <string name="classapp">Class App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="selectall">Select All</string>
    <string name="add">Add</string>
    <string name="singin">SingIn</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
</resources>
